# ez-tensor

./: CMakeLists.txt  I_StaticMultiDimensionalArray.h  I_Tensor.h  README.md  StaticMultiDimensionalArray.h  TensorBase.h  TestStaticMultiDimensionalArray.cpp  TestTensor.cpp
